# site

./: Cargo.toml  LICENSE  README.md  bm.txt  flake.nix  result
assets/: robots.txt  style.css
blog/: ascii-webcam.md  creating-my-website.md  neural-networks.md  new-website.md  nix-is-pretty-awesome.md  portfolio_optimization.md
src/: fragments.rs  handlers.rs  main.rs
src/handlers/: blog.rs  mod.rs  not_found.rs  root.rs  rss_feed.rs  sitemap.rs  stats.rs  tag.rs
templates/: rss_feed.rs.xml
