[package]
name = "site"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
chrono = "0.4.24"
color-eyre = "0.6.2"
#comrak = "0.22.0"
comrak = { git = "https://github.com/vilhelmbergsoe/comrak" }
katex = "0.4.6"
maud = { git = "https://github.com/lambda-fairy/maud", features = ["axum"] }
nom = "7.1.3"
rayon = "1.7.0"
serde = { version = "1.0.154", features = ["derive"] }
serde_yaml = "0.9.19"
tokio = { version = "1.26.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["fs", "compression-br", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[build-dependencies]
ructe = "0.16.1"

[profile.release]
lto = true

