[package]
name = "site"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
chrono = "0.4.41"
color-eyre = "0.6.5"
comrak = "0.41.0"
katex = "0.4.6"
maud = { version = "0.25.0", features = ["axum"] }
nom = "7.1.3"
rand = "0.9.2"
rayon = "1.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.4.4", features = ["fs", "compression-br", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[build-dependencies]
ructe = "0.16.1"

[profile.release]
lto = true
